Override `filterSuggestions` function of `AutocompleteManager` to allow matching characters which are not in the first position.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "untildify": "^2.1.0",
     "mkdirp": "^0.5.1",
-    "touch": "^1.0.0"
+    "touch": "^1.0.0",
+    "fuzzaldrin": "^2.1.0"
   },
   "providedServices": {
     "autocomplete.provider": {
